# Temporal

./: .gitignore  .gitmodules  Build.lua  CMakeLists.txt  Temporal_External.lua  Termporal.sln
.github/workflows/: cmake-multi-platform.yml
Vixen/: Build-Vixen.lua  Vixen.vcxproj
Vixen/source/: test.h  vixen.cpp
core/: Build-Core.lua  CMakeLists.txt  Core.vcxproj
core/Unit Tests/: UnitTests.hpp
core/Unit Tests/graphics/: tests.h
core/Unit Tests/memory/: tests.h
core/source/: defs.cpp  defs.h  pch.h
core/source/datastructures/: datastructures_pch.h
core/source/debug/: Console.cpp  Console.h  Console.impl.h
core/source/filesystem/: Utils.h
core/source/graphics/: CommandManager.cpp  CommandManager.h  Shader.cpp  Shader.h  gfx_pch.h  renderer.cpp  renderer.h  vulkan_api.cpp  vulkan_api.h
core/source/graphics/Rendering/: renderer.cpp  renderer.h
core/source/graphics/Rendering/Framebuffers/: Framebuffer.cpp  Framebuffer.h
core/source/graphics/Rendering/Pipelines/: RenderPipeline.cpp  RenderPipeline.h  RenderPipelines.h
core/source/graphics/Rendering/Shaders/: ShaderGraph.cpp  ShaderGraph.h
core/source/graphics/Rendering/Swapchain/: Swapchain.cpp  Swapchain.h
core/source/graphics/Rendering/Textures/: Texture2D.cpp  Texture2D.h  TextureFactory.cpp  TextureFactory.h
core/source/graphics/Rendering/Utils/: RenderPipelineFactory.h  RenderPipelineUtils.h
core/source/memory/: memory.h
core/source/testing/: Framework.h  TestRunner.cpp  TestRunner.h
core/source/time/: util.h
runtime/: Build-Runtime.lua  CMakeLists.txt  Runtime.vcxproj
runtime/Shaders/: fragment.glsl  fragment.spv  vertex.glsl  vertex.spv
runtime/source/: main.cpp  test.cpp
scripts/: Setup-Windows.bat
